ebs_forms: sem SecurityManager (Forms 10g chama checkTopLevelWindow); shutdown hook identifica quem chama System.exit, fotografa a tela e segura a saída
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017vmggBFzttdiwf6wmJH8XU